[project]
name = "gap"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "alpinedev51", email = "alpinedev51@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.12.0",
    "diffusers>=0.36.0",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "nbformat>=5.10.4",
    "numpy>=2.4.2",
    "pandas>=3.0.0",
    "plotly>=6.5.2",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.0",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
]

[project.scripts]
gap = "gap:main"

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"
